fix icon on mobile devices

--- a/src/app/pages/ip/details/details.component.scss
+++ b/src/app/pages/ip/details/details.component.scss
@@ -28,3 +28,19 @@
   margin-top: 1rem;
 }
 
+@media screen and (max-width: 640px) {
+  .infoDetails {
+    line-height: 1rem;
+    margin-top: 1rem;
+  }
+
+  .details img {
+    margin-bottom: 0.5rem;
+  }
+
+  .ipAddress {
+    font-size: 1.5rem;
+  }
+}
+
+
